add - alias for static files home

--- a/flickipedia/config/vhost.conf
+++ b/flickipedia/config/vhost.conf
@@ -4,6 +4,8 @@
 
     DocumentRoot /home/user/Flickipedia/flickipedia/web
 
+    Alias /static/ /home/user/Flickipedia/flickipedia/web/static/
+
     <Directory />
             Options FollowSymLinks
             AllowOverride None
